versioned_docs/version-2.18/reference/subsystems/scc.mdx
---
title: scc
description: |
  The Succinct Code Counter, aka `scc` (https://github.com/boyter/scc).
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

The Succinct Code Counter, aka `scc` (https://github.com/boyter/scc).

Backend: <span className="color--primary">`pants.backend.project_info`</span>

Config section: <span className="color--primary">`[scc]`</span>

<span className={styles.options}>

## Basic options

### `args`

<Option
  cli_repr={`--scc-args="[<shell_str>, <shell_str>, ...]", ... -- [<shell_str> [<shell_str> [...]]]`}
  env_repr='PANTS_SCC_ARGS'
  toml_repr={`[scc]
args = [
    <shell_str>,
    <shell_str>,
    ...,
]`}
  default_repr={`[]`}
>

Arguments to pass directly to SCC, e.g. `--scc-args='--no-cocomo'`.

Refer to to https://github.com/boyter/scc.

</Option>

## Advanced options

### `known_versions`

<Option
  cli_repr={`--scc-known-versions="['<str>', '<str>', ...]"`}
  env_repr='PANTS_SCC_KNOWN_VERSIONS'
  toml_repr={`[scc]
known_versions = [
    '<str>',
    '<str>',
    ...,
]`}
  default_repr={`[\n  "3.0.0|macos_arm64 |846cb1b25025a0794d455719bc17cfb3f588576a58af1d95036f6c654e294f98|2006145",\n  "3.0.0|macos_x86_64|9c3064e477ab36e16204ad34f649372034bca4df669615eff5de4aa05b2ddf1a|2048134",\n  "3.0.0|linux_arm64 |04f9e797b70a678833e49df5e744f95080dfb7f963c0cd34f5b5d4712d290f33|1768037",\n  "3.0.0|linux_x86_64|13ca47ce00b5bd032f97f3af7aa8eb3c717b8972b404b155a378b09110e4aa0c|1948341"\n]`}
>

Known versions to verify downloads against.

Each element is a pipe-separated string of `version|platform|sha256|length` or
`version|platform|sha256|length|url_override`, where:

- `version` is the version string
- `platform` is one of `[linux_arm64,linux_x86_64,macos_arm64,macos_x86_64]`
- `sha256` is the 64-character hex representation of the expected sha256
  digest of the download file, as emitted by `shasum -a 256`
- `length` is the expected length of the download file in bytes, as emitted by
  `wc -c`
- (Optional) `url_override` is a specific url to use instead of the normally
  generated url for this version

E.g., `3.1.2|macos_x86_64|6d0f18cd84b918c7b3edd0203e75569e0c7caecb1367bbbe409b44e28514f5be|42813`.
and `3.1.2|macos_arm64 |aca5c1da0192e2fd46b7b55ab290a92c5f07309e7b0ebf4e45ba95731ae98291|50926|https://example.mac.org/bin/v3.1.2/mac-aarch64-v3.1.2.tgz`.

Values are space-stripped, so pipes can be indented for readability if necessary.

</Option>

### `url_platform_mapping`

<Option
  cli_repr={`--scc-url-platform-mapping="{'key1': val1, 'key2': val2, ...}"`}
  env_repr='PANTS_SCC_URL_PLATFORM_MAPPING'
  toml_repr={`[scc.url_platform_mapping]
key1 = val1
key2 = val2
...`}
  default_repr={`{\n  "linux_arm64": "arm64-unknown-linux",\n  "linux_x86_64": "x86_64-unknown-linux",\n  "macos_arm64": "arm64-apple-darwin",\n  "macos_x86_64": "x86_64-apple-darwin"\n}`}
>

A dictionary mapping platforms to strings to be used when generating the URL to download the tool.

In `--url-template`, anytime the `{platform}` string is used, Pants will determine the current platform, and substitute `{platform}` with the respective value from your dictionary.

For example, if you define `{"macos_x86_64": "apple-darwin", "linux_x86_64": "unknown-linux"}`, and run Pants on Linux with an intel architecture, then `{platform}` will be substituted in the `--url-template` option with `unknown-linux`.

</Option>

### `url_template`

<Option
  cli_repr={`--scc-url-template=<str>`}
  env_repr='PANTS_SCC_URL_TEMPLATE'
  toml_repr={`[scc]
url_template = <str>`}
  default_repr={`https://github.com/boyter/scc/releases/download/v{version}/scc-{version}-{platform}.zip`}
>

URL to download the tool, either as a single binary file or a compressed file (e.g. zip file). You can change this to point to your own hosted file, e.g. to work with proxies or for access via the filesystem through a `file:$abspath` URL (e.g. `file:/this/is/absolute`, possibly by [templating the buildroot in a config file](https://www.pantsbuild.org/v2.18/docs/options#config-file-entries)).

Use `{version}` to have the value from `--version` substituted, and `{platform}` to have a value from `--url-platform-mapping` substituted in, depending on the current platform. For example, https://github.com/.../protoc-&#123;version&#125;-&#123;platform&#125;.zip.

</Option>

### `use_unsupported_version`

<Option
  cli_repr={`--scc-use-unsupported-version=<UnsupportedVersionUsage>`}
  env_repr='PANTS_SCC_USE_UNSUPPORTED_VERSION'
  toml_repr={`[scc]
use_unsupported_version = <UnsupportedVersionUsage>`}
  one_of='error, warning'
  default_repr={`error`}
>

What action to take in case the requested version of SCC is not supported.

Supported SCC versions: unspecified

</Option>

### `version`

<Option
  cli_repr={`--scc-version=<str>`}
  env_repr='PANTS_SCC_VERSION'
  toml_repr={`[scc]
version = <str>`}
  default_repr={`3.0.0`}
>

Use this version of SCC.

</Option>

## Deprecated options

None

## Related subsystems

None

</span>
